...
            favoritesList.items.contains(itemNo)
                ? favoritesList.remove(itemNo)
                : favoritesList.add(itemNo);

            ScaffoldMessenger.of(context).showSnackBar(SnackBar(
              content: Text(
                  favoritesList.items.contains(itemNo) ? "Added" : "Removed"),
              duration: const Duration(milliseconds: 1000),
            ));
          },
        ),
      ),
    );
...
